fixed spacing on hero image:

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -35,6 +35,14 @@
     margin: 55px 0 0 50px;
 }
 
+@media only screen and (min-width: 1100px) {
+    .heroOuterContainer {
+        max-width: 1140px;
+        margin: auto;
+        padding: 0 1.875rem;
+    }
+}
+
 @media only screen and (max-width: 1100px) {
     .heroOuterContainer {
         flex-direction: column;
